employee tab employeeInfo and updateEmployeeInfo

--- a/KILR Project/KILR Project/KILR Project.csproj
+++ b/KILR Project/KILR Project/KILR Project.csproj
@@ -91,7 +91,9 @@
     </Compile>
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeManager.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="Shift.cs" />
     <Compile Include="StockManager.cs" />
     <Compile Include="UpdateDepartment.cs">
       <SubType>Form</SubType>
