Added combo box with manager ids

--- a/KILR Project/KILR Project/KILR Project.csproj
+++ b/KILR Project/KILR Project/KILR Project.csproj
@@ -85,18 +85,21 @@
     <Compile Include="DepartmentInformation.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DepartmentInformation.Designer.cs">
+    <Compile Include="DepartmentInformation.designer.cs">
       <DependentUpon>DepartmentInformation.cs</DependentUpon>
     </Compile>
+    <Compile Include="DepartmentManager.cs" />
     <Compile Include="EditDepartment.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EditDepartment.Designer.cs">
+    <Compile Include="EditDepartment.designer.cs">
       <DependentUpon>EditDepartment.cs</DependentUpon>
     </Compile>
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeManager.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="Shift.cs" />
     <Compile Include="StockManager.cs" />
     <Compile Include="UpdateDepartment.cs">
       <SubType>Form</SubType>
