--- a/KILR Project/KILR Project/KILR Project.csproj
+++ b/KILR Project/KILR Project/KILR Project.csproj
@@ -75,6 +75,12 @@
     <Compile Include="AddEmployeesToDept.Designer.cs">
       <DependentUpon>AddEmployeesToDept.cs</DependentUpon>
     </Compile>
+    <Compile Include="AssignShift.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AssignShift.Designer.cs">
+      <DependentUpon>AssignShift.cs</DependentUpon>
+    </Compile>
     <Compile Include="CreateDepartment.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,6 +156,9 @@
     <Compile Include="UserManager.cs" />
     <EmbeddedResource Include="AddEmployeesToDept.resx">
       <DependentUpon>AddEmployeesToDept.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AssignShift.resx">
+      <DependentUpon>AssignShift.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreateDepartment.resx">
       <DependentUpon>CreateDepartment.cs</DependentUpon>
