--- a/KILR Project/KILR Project/KILR Project.csproj
+++ b/KILR Project/KILR Project/KILR Project.csproj
@@ -41,7 +41,7 @@
       <HintPath>..\packages\Google.Protobuf.3.6.1\lib\net45\Google.Protobuf.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=8.0.19.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.8.0.19\lib\net452\MySql.Data.dll</HintPath>
+      <HintPath>..\..\..\..\..\Downloads\MySql.Data\MySql.Data.DLL</HintPath>
     </Reference>
     <Reference Include="Renci.SshNet, Version=2016.1.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106, processorArchitecture=MSIL">
       <HintPath>..\packages\SSH.NET.2016.1.0\lib\net40\Renci.SshNet.dll</HintPath>
@@ -75,6 +75,12 @@
     </Compile>
     <Compile Include="AddEmployeesToDept.Designer.cs">
       <DependentUpon>AddEmployeesToDept.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AssignShift.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AssignShift.Designer.cs">
+      <DependentUpon>AssignShift.cs</DependentUpon>
     </Compile>
     <Compile Include="CreateDepartment.cs">
       <SubType>Form</SubType>
@@ -151,6 +157,9 @@
     <Compile Include="UserManager.cs" />
     <EmbeddedResource Include="AddEmployeesToDept.resx">
       <DependentUpon>AddEmployeesToDept.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AssignShift.resx">
+      <DependentUpon>AssignShift.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreateDepartment.resx">
       <DependentUpon>CreateDepartment.cs</DependentUpon>
