--- a/KILR Project/KILR Project/KILR Project.csproj
+++ b/KILR Project/KILR Project/KILR Project.csproj
@@ -107,6 +107,12 @@
     <Compile Include="EmployeeManager.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="ReleaseEmployee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReleaseEmployee.Designer.cs">
+      <DependentUpon>ReleaseEmployee.cs</DependentUpon>
+    </Compile>
     <Compile Include="Shift.cs" />
     <Compile Include="StockManager.cs" />
     <Compile Include="UpdateDepartment.cs">
@@ -169,6 +175,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditDepartment.resx">
       <DependentUpon>EditDepartment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReleaseEmployee.resx">
+      <DependentUpon>ReleaseEmployee.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UpdateDepartment.resx">
       <DependentUpon>UpdateDepartment.cs</DependentUpon>
