--- a/KILR Project/KILR Project/KILR Project.csproj
+++ b/KILR Project/KILR Project/KILR Project.csproj
@@ -40,7 +40,7 @@
     <Reference Include="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Protobuf.3.6.1\lib\net45\Google.Protobuf.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=8.0.20.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data, Version=8.0.19.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="Renci.SshNet, Version=2016.1.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106, processorArchitecture=MSIL">
       <HintPath>..\packages\SSH.NET.2016.1.0\lib\net40\Renci.SshNet.dll</HintPath>
     </Reference>
@@ -88,6 +88,8 @@
     </Compile>
     <Compile Include="DataAccess\DB.cs" />
     <Compile Include="DataAccess\DepartmentDataAccess.cs" />
+    <Compile Include="DataAccess\OrderDataAccess.cs" />
+    <Compile Include="DataAccess\TransactionsDataAccess.cs" />
     <Compile Include="Objects\Department.cs" />
     <Compile Include="DepartmentInformation.cs">
       <SubType>Form</SubType>
@@ -104,6 +106,8 @@
     </Compile>
     <Compile Include="Objects\Employee.cs" />
     <Compile Include="ObjectManagers\EmployeeManager.cs" />
+    <Compile Include="Objects\Order.cs" />
+    <Compile Include="ObjectManagers\OrderManager.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Objects\Product.cs" />
     <Compile Include="DataAccess\ProductDataAccess.cs" />
